2012-01-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* po/POTFILES.in: Regenerate.

2012-01-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/posix_wrap/assert.h (assert_real): Replace grub_fatal
	with grub_printf to avoid unnecessary fatal failure.

2012-01-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/posix_wrap/limits.h (SHRT_MAX): New define.
	(INT_MAX): Likewise.
	* grub-core/lib/posix_wrap/stdio.h (snprintf): New function.
	* grub-core/lib/posix_wrap/stdlib.h (abs): Likewise.
	* grub-core/lib/posix_wrap/string.h (memcmp): Likewise.
	(strcpy): Likewise.
	(strstr): Likewise.
	(strchr): Likewise.
	(strncpy): Likewise.
	(strcat): Likewise.
	(strncat): Likewise.
	(strcoll): Likewise.
	* include/grub/types.h (GRUB_SHRT_MAX): New define.
	(GRUB_INT_MAX): Likewise.

2012-01-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/gnulib/regcomp.c (regerror): Don't use abort on
	unexpected error.
	(optimize_utf8): Likewise.
	* grub-core/lib/posix_wrap/stdlib.h (abort): Removed.

2012-01-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/boot/i386/pc/lnxboot.S: Use
	GRUB_DECOMPRESSOR_MAX_DECOMPRESSOR_SIZE.
	* grub-core/boot/i386/pc/startup_raw.S: Ensure about boot_dev
	location.
	* include/grub/offsets.h (GRUB_DECOMPRESSOR_I386_PC_BOOT_DEVICE): New
	definition.
	(GRUB_DECOMPRESSOR_I386_PC_MAX_DECOMPRESSOR_SIZE): Likewise.

2012-01-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/getroot.c (grub_util_get_dm_node_linear_info): Fix memory leak.
	* grub-core/disk/cryptodisk.c (cryptodisk_cleanup): Disable for
	now to avoid double free.
	* grub-core/kern/emu/hostdisk.c (grub_util_biosdisk_dev): Rename to
	hostdisk.
	* include/grub/disk.h (grub_disk_dev_id): New id HOSTDISK.
	* util/grub-probe.c (escape_of_path): Always return a new copy.
	(print_full_name): Escape path.
	(probe): Don't call grub_util_devname_to_ofpath on NULL.
	Fix hints on abstractions.

2012-01-29  Vladimir Serbinenko  <phcoder@gmail.com>
